--- a/css/styles.css
+++ b/css/styles.css
@@ -1,6 +1,8 @@
 @charset "utf-8";
 /* CSS Document */
-
+* {
+  box-sizing: border-box;
+}
 body,td,th,p{
 	font-family: Arial, Helvetica, sans-serif;
 	font-size: 10pt;
@@ -30,11 +32,16 @@ a img{
 }
 h1, h2, h3, h4, h5, h6 {
   font-family: Arial, Helvetica, sans-serif;
-  margin: 0 0 20px;
+  margin: 0 0 10px;
+  padding: 15px 0px 5px;
 }
 article, aside, canvas, details, figcaption, figure, footer, header, hgroup, menu, nav, section {
 	display: block;
 }
+header, main, footer {
+  width: 100vw;
+}
+
 #maincontent {
   background-color: #f3f3f3;
   min-height: 100%;
@@ -51,7 +58,7 @@ article, aside, canvas, details, figcaption, figure, footer, header, hgroup, men
 /* ====================== Navigation ====================== */
 nav {
   width: 100%;
-  height: 80px;
+  padding: 15px 0px;
   background-color: #252831;
   text-align:center;
 }
@@ -60,9 +67,9 @@ nav h1 {
 }
 nav h1 a {
   color: #fff;
-  font-size: 14pt;
+  font-size: 1em;
   font-weight: 200;
-  letter-spacing: 10px;
+  letter-spacing: 3px;
   text-transform: uppercase;
 }
 #breadcrumb {
@@ -73,6 +80,7 @@ nav h1 a {
     margin: 0;
     width: calc(50% - 80px);
 }
+
 
 /* Display list items side by side */
 #breadcrumb li {
@@ -105,17 +113,15 @@ nav h1 a {
 }
 /* ====================== Restaurant Filtering ====================== */
 .filter-options {
-  width: 100%;
-  height: 50px;
+  min-height: 50px;
+  padding: 0px 15px 10px;
   background-color: #3397DB;
-  align-items: center;
 }
 .filter-options h2 {
   color: white;
   font-size: 1rem;
   font-weight: normal;
   line-height: 1;
-  margin: 0 20px;
 }
 .filter-options select {
   background-color: white;
@@ -124,9 +130,9 @@ nav h1 a {
   font-size: 11pt;
   height: 35px;
   letter-spacing: 0;
-  margin: 10px;
   padding: 0 10px;
   width: 200px;
+  margin-bottom: 10px;
 }
 
 /* ====================== Restaurant Listing ====================== */
@@ -134,18 +140,16 @@ nav h1 a {
   background-color: #f3f3f3;
   list-style: outside none none;
   margin: 0;
-  padding: 30px 15px 60px;
+  padding: 0px;
   text-align: center;
 }
 #restaurants-list li {
   background-color: #fff;
-  border: 2px solid #ccc;
   font-family: Arial,sans-serif;
-  margin: 15px;
   min-height: 380px;
-  padding: 0 30px 25px;
   text-align: left;
-  width: 270px;
+  margin-bottom: 15px;
+  box-shadow: 0px 2px 3px 0 rgba(50, 50, 50, 0.6);
 }
 #restaurants-list .restaurant-img {
   background-color: #ccc;
@@ -155,14 +159,16 @@ nav h1 a {
   min-height: 248px;
   min-width: 100%;
 }
+#restaurants-list li .summary {
+  padding: 0px 15px 10px;
+}
 #restaurants-list li h1 {
   color: #f18200;
-  font-family: Arial,sans-serif;
-  font-size: 14pt;
+  /*font-size: 14pt; */
   font-weight: 200;
-  letter-spacing: 0;
-  line-height: 1.3;
-  margin: 20px 0 10px;
+  /* letter-spacing: 0; */
+  /* line-height: 1.3; */
+  /* margin: 20px 0 10px; */
   text-transform: uppercase;
 }
 #restaurants-list p {
