--- a/css/stylesGrid.css
+++ b/css/stylesGrid.css
@@ -69,6 +69,7 @@
     min-height: 380px;
     text-align: left;
     box-shadow: 0px 2px 3px 0 rgba(50, 50, 50, 0.6);
+    transition: all 1s ease-in-out;
 }
   
 #restaurants-list .restaurant-img {
@@ -77,6 +78,10 @@
     margin: 0;
     max-width: 100%;
     min-height: 248px;
+}
+  
+#restaurants-list li:hover {
+    transform: scale(1.1);
 }
   
 #restaurants-list li .summary {
@@ -113,7 +118,7 @@
 
 
 /* ====================== Restaurant Details ====================== */
-.restaurant-reviews {
+.inside {
     display: grid; 
     grid-template-areas:  
         "header header"
@@ -121,7 +126,7 @@
         "footer footer";
 }
 
-.restaurant-reviews #footer {
+.inside #footer {
     grid-area: footer;
     background-color: #444;
     color: #aaa;
@@ -134,7 +139,7 @@
     bottom: 0;
 }
 
-.restaurant-reviews #maincontent  {
+.inside #maincontent  {
     padding-top: 85px;
     display: grid;
     grid-template-areas:  
@@ -160,16 +165,69 @@
     width: 50%;
 }
 
-.restaurant-reviews #map {
+.inside #map {
     background-color: #ccc;
     height: 100%;
     width: 100%;
 }
 
-.restaurant-reviews #restaurant-container {
+.inside #restaurant-container {
     grid-area: restaurant;
+    padding: 2%;
 }
 
-.restaurant-reviews #reviews-container {
+.inside #reviews-container {
     grid-area: review;
+    padding: 2%;
+}
+
+
+/*================= MOBILE ===================*/
+@media only screen and (max-width: 580px) {
+    #restaurant-img {
+        border-top-left-radius: 50px;
+    }
+
+    .restaurant-reviews-main {
+        grid-template-columns: 100%;
+        grid-template-areas:  
+            "map"
+            "restaurant" 
+            "review";
+    }
+
+    .restaurant-reviews-main #map-container {
+        position: relative;
+        right: 0;
+        height: 50vh;
+        /* bottom: 64px; */
+        top: 80px;
+        width: 100%;
+    } 
+    
+    .leaflet-top {
+        top: 30px;
+    }
+
+    #map {
+        width: 100vw;
+    }
+
+    #footer {
+        position: relative;
+    }
+
+    .filter-options {
+        display: grid;
+        grid-template-areas:  
+            "results" 
+            "neighbor" 
+            "cuisins";
+        grid-template-columns: 1fr;
+        justify-items: center;
+    }
+
+    .filter-options h2 {
+        justify-self: center;
+    }
 }
