--- a/css/styles.css
+++ b/css/styles.css
@@ -2,13 +2,15 @@
 /* CSS Document */
 * {
   box-sizing: border-box;
+  padding: 0;
+  margin: 0;
+  font-family: 'Raleway', sans-serif;
 }
 
 body,
 td,
 th,
 p{
-	font-family: Arial, Helvetica, sans-serif;
 	font-size: 10pt;
 	color: #333;
 	line-height: 1.5;
@@ -22,13 +24,12 @@ body {
 
 ul, 
 li {
-	font-family: Arial, Helvetica, sans-serif;
 	font-size: 10pt;
 	color: #333;
 }
 
 a {
-	color: orange;
+	color: rgb(255, 165, 0);
 	text-decoration: none;
 }
 
@@ -43,7 +44,6 @@ a img{
 }
 
 h1, h2, h3, h4, h5, h6 {
-  font-family: Arial, Helvetica, sans-serif;
   margin: 0 0 10px;
   padding: 15px 0px 5px;
 }
@@ -162,11 +162,8 @@ nav h1 a {
   width: 100%;
 }
 
-
-
 #restaurant-name {
   color: #f18200;
-  font-family: Arial,sans-serif;
   font-size: 20pt;
   font-weight: 200;
   letter-spacing: 0;
@@ -174,6 +171,7 @@ nav h1 a {
   text-transform: uppercase;
   line-height: 1.1;
 }
+
 #restaurant-img {
 	width: 90%;
 }
@@ -193,49 +191,81 @@ nav h1 a {
   padding: 2px 0;
   text-align: center;
   text-transform: uppercase;
-	width: 90%;
+	width: 100%;
 }
 
 #restaurant-container, 
 #reviews-container {
   border-bottom: 1px solid #d9d9d9;
   border-top: 1px solid #fff;
-  /* padding: 140px 40px 30px; */
   width: 100%;
 }
-/* 
+
 #reviews-container {
-  padding: 30px 40px 80px;
-} */
+  padding: 20px;
+}
 
 #reviews-container h2 {
-  color: #f58500;
+  color: rgb(255, 157, 0);
   font-size: 24pt;
   font-weight: 300;
   letter-spacing: -1px;
   padding-bottom: 1pt;
 }
 
-#reviews-list {
-  margin: 0;
-  padding: 0;
-}
-
 #reviews-list li {
+  display: grid;
+  grid-template:  
+    "author date"
+    "rating ."
+    "text text";
+  grid-template-columns: 50% 50%;
   background-color: #fff;
-    border: 2px solid #f3f3f3;
-  display: block;
+  border: 2px solid #f3f3f3;
+  border-radius: 40px 0 40px 0;
   list-style-type: none;
   margin: 0 0 30px;
   overflow: hidden;
-  padding: 0 20px 20px;
   position: relative;
-  width: 85%;
+  width: 100%;
 }
 
 #reviews-list li p {
   margin: 0 0 10px;
 }
+
+#reviews-list li p:first-of-type {
+  grid-area: author;
+  background: #333;
+  color: rgb(255, 255, 255);
+  padding: 20px;
+  font-size: 20px;
+}
+
+#reviews-list li p:nth-child(2){
+  padding: 23px 10px; 
+  text-align: right;
+  grid-area: date;
+  background: #333;
+  color: rgb(255, 255, 255);
+}
+
+#reviews-list li p:nth-child(3){
+  grid-area: rating;
+  width: 115px;
+  background-color: rgb(255, 157, 0);
+  text-transform: uppercase;
+  text-align: center;
+  border-radius: 5px;
+  padding: 10px;
+  margin: 15px 0 0 20px;
+}
+
+#reviews-list li p:nth-child(4){
+  grid-area: text;
+  padding: 20px;
+}
+
 
 #restaurant-hours td {
   color: #666;
