--- a/css/stylesGrid.css
+++ b/css/stylesGrid.css
@@ -1,25 +1,8 @@
-#maincontent {
-    display: grid;
-    grid-template-areas:  
-        "map"
-        "options";
-}
-
-#map-container { grid-area: map; }
 
 /* ====================== Restaurant Filtering ====================== */
-.option-section {
-    grid-area: options;
-    display: grid;
-    grid-template-areas:  
-        "filter"
-        "list";
-}
-
 .filter-options {
     background-color: #3397DB;
     min-height: 50px;
-    grid-area: filter;
     display: grid;
     grid-template-areas:  
         "results neighbor cuisins";
@@ -41,7 +24,7 @@
     background-color: white;
     border: 1px solid #fff;
     font-family: Arial,sans-serif;
-    font-size: 11pt;
+    font-size: 1em;
     height: 35px;
     letter-spacing: 0;
     padding: 0 10px;
@@ -96,17 +79,13 @@
   
 #restaurants-list li h1 {
     color: #f18200;
-    /*font-size: 14pt; */
     font-weight: 200;
-    /* letter-spacing: 0; */
-    /* line-height: 1.3; */
-    /* margin: 20px 0 10px; */
     text-transform: uppercase;
 }
   
 #restaurants-list p {
     margin: 0;
-    font-size: 11pt;
+    font-size: 1em;
 }
   
 #restaurants-list li a {
@@ -114,7 +93,7 @@
     border-bottom: 3px solid #eee;
     color: #fff;
     display: inline-block;
-    font-size: 10pt;
+    font-size: 1em;
     margin: 15px 0 0;
     padding: 8px 30px 10px;
     text-align: center;
@@ -123,14 +102,12 @@
 }
 
 
-/* ====================== Restaurant Details ====================== */
-
-
+/* ====================== Restaurant Reviews Details ====================== */
 .restaurant-reviews #footer {
     grid-area: footer;
     background-color: #444;
     color: #aaa;
-    font-size: 8pt;
+    font-size: 0.8em;
     letter-spacing: 1px;
     padding: 25px;
     text-align: center;
@@ -177,82 +154,4 @@
 
 .restaurant-reviews #reviews-container {
     grid-area: review;
-}
-
-/*================= MOBILE ===================*/
-@media (max-width: 580px) {
-    .inside #restaurant-img {
-        border-top-left-radius: 50px;
-        width: 100%;
-    }
-
-    .restaurant-reviews-main {
-        grid-template-columns: 100%;
-        grid-template-areas:  
-            "map"
-            "restaurant" 
-            "review";
-    }
-    
-    #breadcrumb {
-        z-index: 1000;
-    }
-
-    #footer {
-        position: relative;
-    }
-
-    .filter-options {
-        display: grid;
-        grid-template-areas:  
-            "results" 
-            "neighbor" 
-            "cuisins";
-        grid-template-columns: 1fr;
-        justify-items: center;
-    }
-
-    .filter-options h2 {
-        justify-self: center;
-    }
-    
-    /* MAP */
-    .inside #map-container {
-        position: relative;
-        height: 400px;
-        width: 100%;
-        left: 0;
-        top: 102px;
-    }
-
-    #map {
-        width: 100%;
-    }
-
-    .leaflet-bottom {
-        width: 100%;
-    }
-
-    .leaflet-top, .leaflet-bottom {
-        z-index: 999 !important;
-    }
-    /* About restaurant */
-    .inside #restaurant-container {
-        padding: 96px 20px 25px;
-        position: relative;
-    }
-
-    .leaflet-bottom,
-    .inside #restaurant-cuisine,
-    .leaflet-control-attribution.leaflet-control {
-        width: 100%;
-    }
-
-    #restaurant-name {
-        font-size: 19pt;
-    }
-
-    /* Review */
-    #reviews-container {
-    }
 }
