--- a/css/styles.css
+++ b/css/styles.css
@@ -313,10 +313,10 @@ nav h1 a {
 
 #reviews-list li {
     display: grid;
-    grid-template:  
+    /* grid-template:  
       "author date"
       "rating ."
-      "text text";
+      "text text"; */
     grid-template-columns: 50% 50%;
     background-color: #fff;
     border: 2px solid #f3f3f3;
@@ -333,7 +333,9 @@ nav h1 a {
 }
 
 #reviews-list li p:first-of-type {
-    grid-area: author;
+    /* grid-area: author; */
+    grid-row: 1;
+    grid-column: 1;
     background: #333;
     color: rgb(255, 255, 255);
     padding: 20px;
@@ -343,13 +345,17 @@ nav h1 a {
 #reviews-list li p:nth-child(2){
     padding: 23px 10px; 
     text-align: right;
-    grid-area: date;
+    /* grid-area: date; */
+    grid-row: 1;
+    grid-column: 2;
     background: #333;
     color: rgb(255, 255, 255);
 }
 
 #reviews-list li p:nth-child(3){
-    grid-area: rating;
+    /* grid-area: rating; */
+    grid-row: 2;
+    grid-column: 1;
     width: 115px;
     background-color: rgb(255, 157, 0);
     text-transform: uppercase;
@@ -360,7 +366,9 @@ nav h1 a {
 }
 
 #reviews-list li p:nth-child(4){
-    grid-area: text;
+    /* grid-area: text; */
+    grid-row: 3;
+    grid-column: 1 / -1;
     padding: 20px;
 }
 
@@ -410,6 +418,7 @@ nav h1 a {
 .restaurant-reviews #map {
     height: 100%;
     width: 100%;
+    text-indent: -100%;
 }
 
 .restaurant-reviews #restaurant-container {
